# offboarding_agent

./: .gitignore  LICENSE  README.md  claude.md  main.py  package-lock.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yaml
backend/: main.py
backend/app/: 2do.md  config.py  dependencies.py
backend/app/db/repositories/: audio_recordings_repository.py  documents_repository.py  employees_repository.py  knowledge_chunks_repository.py  sessions_repository.py  transcriptions_repository.py
backend/app/models/: schema.py
backend/app/routers/: audio_routers.py  document_router.py  employees.py  search.py  search_routers.py  sessions_routers.py  transcriptions.py
backend/app/services/: embeddings.py  transcription.py
backend/tests/: playground.py  test_config.py  test_depedencies.py  test_routers.py  test_speech2text.py
config/: config.py
src/audio_processing/: speech2text.py
supabase/: config.toml
supabase/migrations/: 20260213000001_extensions.sql  20260213000002_employees.sql  20260213000003_sessions.sql  20260213000004_audio_recordings.sql  20260213000005_transcriptions.sql  20260213000006_documents.sql  20260213000007_knowledge_chunks.sql  20260213000008_knowledge_queries.sql  20260213000009_functions.sql  20260213000010_triggers.sql  20260213000011_views.sql  20260213000012_rls_policies.sql
supabase/snippets/: Untitled query 468.sql
tests/: test_speech2text.py
