[project]
name = "offboarding-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic-settings>=2.0.0",
    "supabase>=2.0.0",
    "python-multipart>=0.0.9",
    "librosa>=0.10.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.7.0",
    "pdfplumber>=0.11.9",
]
